--- a/test.html
+++ b/test.html
@@ -3,5 +3,20 @@
 	</head>
 	<body>
 		<h1>Sup yo?!</h1>
+
+		<ol>
+			<li>
+				Alpha
+			</li>
+			<li>
+				Beta
+			</li>
+			<li>
+				Gamma
+			</li>
+			<li>
+				Delta
+			</li>
+		</ol>
 	</body>
 </html>
